src/tramabol/cobaux/cobaux.h

/* cobaux_module.c */

extern int
cobaux_module_init (cob_module **module_ptr,
		    cob_global **globals_ptr,
		    const char * const module_name,
		    const char * const module_source);
extern void
cobaux_module_enter (cob_module * const module);