src/tramabol/ezlibcob/stubs.h

/* Statement enum */

enum cob_statement {
	STMT_UNKNOWN = 0
};
/* Field structure */

typedef struct __cob_field {
	size_t			size;		/* Field size */
	unsigned char		*data;		/* Pointer to field data */ //TODO: buffer with size
	const cob_field_attr	*attr;		/* Pointer to attribute */
} cob_field;
/* Call union structures */

typedef union __cob_call_union {
	void		*(*funcptr)();	/* Function returning "void *" */
	void		(*funcnull)();	/* Function returning nothing */
	cob_field	*(*funcfld)();	/* Function returning "cob_field *" */
	int		(*funcint)();	/* Function returning "int" */
	void		*funcvoid;	/* Redefine to "void *" */
/* #ifdef	_WIN32				/\* stdcall variants *\/ */
/* 	void		*(__stdcall *funcptr_std)(); */
/* 	void		(__stdcall *funcnull_std)(); */
/* 	cob_field	*(__stdcall *funcfld_std)(); */
/* 	int		(__stdcall *funcint_std)(); */
/* #endif */
} cob_call_union;
typedef struct NO_CONSTR NO_DESTR __cob_module {
	struct __cob_module	*next;			/* Next pointer */
	cob_field		**cob_procedure_params;	/* Arguments */
	const char		*module_name;		/* Module name */
	const char		*module_formatted_date;	/* Module full date */
	const char		*module_source;		/* Module source */
	cob_call_union		module_entry;		/* Module entry */
	cob_call_union		module_cancel;		/* Module cancel */
	const unsigned char	*collating_sequence;	/* COLLATING */
	cob_field		*crt_status;		/* CRT STATUS */
	cob_field		*cursor_pos;		/* CURSOR */
	unsigned int		*module_ref_count;	/* Module ref count */
	const char		**module_path;		/* Module path */

	unsigned int		module_active;		/* Module is active */
	unsigned int		module_date;		/* Module num date */
	unsigned int		module_time;		/* Module num time */
	unsigned int		module_type;		/* Module type (program = 0, function = 1) */
	unsigned int		module_param_cnt;	/* Module param count */
	unsigned int		module_returning;	/* Module return type, currently unset+unused */
	int			module_num_params;	/* Module arg count */

	unsigned char		ebcdic_sign;		/* DISPLAY SIGN */
	unsigned char		decimal_point;		/* DECIMAL POINT */
	unsigned char		currency_symbol;	/* CURRENCY */
	unsigned char		numeric_separator;	/* Separator */

	unsigned char		flag_filename_mapping;	/* Mapping */
	unsigned char		flag_binary_truncate;	/* Truncation */
	unsigned char		flag_pretty_display;	/* Pretty display */
	unsigned char		flag_host_sign;		/* Host sign */

	unsigned char		flag_no_phys_canc;	/* No physical cancel (constant by cobc)*/
	unsigned char		flag_main;		/* Main module */
	unsigned char		flag_fold_call;		/* Fold case */
	unsigned char		flag_exit_program;	/* Exit after CALL */

	unsigned char		flag_did_cancel;	/* Module has been canceled */
	unsigned char		flag_dump_ready;	/* Module was compiled with -fdump */
	unsigned char		flag_debug_trace;	/* Module debug/trace compile option */

	unsigned char		unused[1];		/* Use these flags up later, added for alignment */

	unsigned int		module_stmt;		/* Position of last statement executed
											   as modulated source line
											   and index to module_sources for source file */
	const char		**module_sources;	/* Source module names compiled */

	cob_field		*xml_code;		/* XML-CODE */
	cob_field		*xml_event;		/* XML-EVENT */
	cob_field		*xml_information;	/* XML-INFORMATION */
	cob_field		*xml_namespace;		/* XML-NAMESPACE */
	cob_field		*xml_nnamespace;	/* XML-NNAMESPACE */
	cob_field		*xml_namespace_prefix;	/* XML-NAMESPACE-PREFIX */
	cob_field		*xml_nnamespace_prefix;	/* XML-NNAMESPACE-PREFIX */
	cob_field		*xml_ntext;		/* XML-NTEXT */
	cob_field		*xml_text;		/* XML-TEXT */

	cob_field		*json_code;		/* JSON-CODE */
	cob_field		*json_status;		/* JSON-STATUS */

	const char	*gc_version;	/* module version, until 3.1.2: set by cob_check_version */

	unsigned char		xml_mode;		/* Mode to handle XML PARSE (may be extended) */
		/* similar to XMLPARSE(XMLNSS) Micro Focus,
		   IBM may be different (_very_ likely for error codes);
		   but the main difference is to "COMPAT" */
	struct cob_frame_ext *frame_ptr;	/* current frame ptr, note: if set then cob_frame in this
										   module is of type "struct cob_frame_ext",
										   otherwise "struct cob_frame" */
	const char		*section_name;		/* name of current active section */
	const char		*paragraph_name;		/* name of current active pagagraph */
	enum cob_statement	statement;		/* statement currently executed */
} cob_module;
typedef struct __cob_global cob_global;
COB_EXPIMP void	cob_init			(const int, char ** );
COB_EXPIMP void	cob_module_leave		(cob_module * );