src/tramabol/libcob-ctypes/libcob_module.ml

(**************************************************************************)
(*                                                                        *)
(*                        SuperBOL OSS Studio                             *)
(*                                                                        *)
(*  Copyright (c) 2022-2026 OCamlPro SAS                                  *)
(*                                                                        *)
(* All rights reserved.                                                   *)
(* This source code is licensed under the GNU Affero General Public       *)
(* License version 3 found in the LICENSE.md file in the root directory   *)
(* of this source tree.                                                   *)
(*                                                                        *)
(**************************************************************************)

open Ctypes

(* This Types_generated module is an instantiation of the Types functor defined
   in the libcob_types.ml file.  It's generated by a C program that Dune creates
   and runs behind the scenes. *)
module Types = Libcob_types_generated

module Functions (Foreign: Ctypes.FOREIGN) = struct
  open Foreign

  (* let global_ptr = *)
  (*   foreign_value "cob_glob_ptr" (ptr Types.cob_global) *)

  let global_init =
    foreign "cob_init" @@
      int @-> ptr (ptr char) @-> returning void

  let init =
    foreign "cobaux_module_init" @@
      ptr (ptr Types.cob_module) @-> ptr (ptr Types.cob_global) @->
        string @-> string @-> returning nativeint

  let enter =
    foreign "cobaux_module_enter" @@
      ptr Types.cob_module @-> returning void

  let leave =
    foreign "cob_module_leave" @@
      ptr Types.cob_module @-> returning void

end
